<resources>
    <string name="app_name">Clinic</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_language">App Language</string>
    <string name="add_user">Add User</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="dark_mode_button">Dark Mode Button</string>
    <string name="search" translatable="false">Search</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="roles_array">
        <item>admin</item>
        <item>employee</item>
    </string-array>
</resources>
