<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?android:attr/homeAsUpIndicator"
        app:titleTextColor="@color/black"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <ImageButton
            android:id="@+id/buttonSerach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/search"
            android:src="@drawable/search"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="356dp"
            tools:layout_editor_absoluteY="17dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/buttonDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_dark_mode_24"
            android:text="@string/dark_mode"
            android:layout_marginVertical="20dp"
            android:textSize="20sp"
            android:textAlignment="textStart"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/buttonLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:drawablePadding="8dp"
            android:text="@string/app_language"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_marginVertical="20dp"
            app:drawableStartCompat="@drawable/internet" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:minHeight="48dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/buttonAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:drawablePadding="8dp"
            android:text="@string/add_user"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/baseline_group_add_24" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/buttonLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:drawablePadding="8dp"
            android:text="@string/log_out"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/icons8logout50" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:drawablePadding="8dp"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/baseline_info_outline_24" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
