<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
      >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/buttonAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/add_user"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/baseline_group_add_24" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/buttonLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/log_out"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/icons8logout50" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />
        <TextView
            android:id="@+id/buttonContant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="contact us"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/baseline_email_24" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />
        <TextView
            android:id="@+id/buttonShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="share"
            android:textColor="@android:color/black"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/icons8logout50" />



        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
